apps/mynforkort/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.0.134"],"port":443,"protocol":"HTTPS","serviceName":"apps:mynforkort-service","ingressName":"apps:mynforkort-ingress","hostname":"xn--myndighetsfrkortningar-4hc.nu","path":"/","allNodes":false}]'
  name: mynforkort-ingress
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: xn--myndighetsfrkortningar-4hc.nu
      http:
        paths:
          - backend:
              service:
                name: mynforkort-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - xn--myndighetsfrkortningar-4hc.nu
      secretName: mynforkort-tls-cert
